attempting to fix mobile canvas overflow

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -16,6 +16,8 @@
     margin: 0;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     max-width: 100%;
 
     @media screen and (max-width:$s){
